SERVER-91784 Remove missing values from arrays after projection (#24217)

GitOrigin-RevId: e37b8f4da383ef2e3d821dad79ec2c57abd7a568