src/mongo/db/exec/projection_node.cpp
@@ -191,14 +191,21 @@ Value ProjectionNode::applyProjectionsToValue(Value inputValue) const {
         applyProjections(inputValue.getDocument(), &outputSubDoc);
         return outputSubDoc.freezeToValue();
     } else if (inputValue.getType() == BSONType::Array) {
-        std::vector<Value> values = inputValue.getArray();
-        for (auto& value : values) {
+        std::vector<Value> values;
+        values.reserve(inputValue.getArrayLength());
+        for (const auto& input : inputValue.getArray()) {
             // If this is a nested array and our policy is to not recurse, skip the array.
             // Otherwise, descend into the array and project each element individually.
-            const bool shouldSkip = value.isArray() &&
+            const bool shouldSkip = input.isArray() &&
                 _policies.arrayRecursionPolicy == ArrayRecursionPolicy::kDoNotRecurseNestedArrays;
-            value = (shouldSkip ? transformSkippedValueForOutput(value)
-                                : applyProjectionsToValue(value));
+            auto value = (shouldSkip ? transformSkippedValueForOutput(input)
+                                     : applyProjectionsToValue(input));
+            // If subtree contains computed fields, we need to keep missing values to apply
+            // expressions in the next step. They will either become objects or will be cleaned up
+            // after applying the expressions.
+            if (!value.missing() || _subtreeContainsComputedFields) {
+                values.push_back(std::move(value));
+            }
         }
         return Value(std::move(values));
     } else {
@@ -237,9 +244,13 @@ Value ProjectionNode::applyExpressionsToValue(const Document& root, Value inputV
         applyExpressions(root, &outputDoc);
         return outputDoc.freezeToValue();
     } else if (inputValue.getType() == BSONType::Array) {
-        std::vector<Value> values = inputValue.getArray();
-        for (auto& value : values) {
-            value = applyExpressionsToValue(root, value);
+        std::vector<Value> values;
+        values.reserve(inputValue.getArrayLength());
+        for (const auto& input : inputValue.getArray()) {
+            auto value = applyExpressionsToValue(root, input);
+            if (!value.missing()) {
+                values.push_back(std::move(value));
+            }
         }
         return Value(std::move(values));
     } else {
